# stats-sql-generator

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  init.sh  migration.sh
examples/: xlsx.rs
fixtures/: migration_tpl.txt  test.csv  test.xlsx
src/: cli.rs  file.rs  lib.rs  main.rs  xlsx.rs
src/date/: date.rs  mod.rs
src/process/: mod.rs
src/process/directory_stats/: args.rs  processor.rs
src/process/profile_stats/: args.rs  cli.rs  mod.rs  processor.rs
